--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,9 @@ html, body {
     border-bottom: none;
 }
 
-.cell:nth-child(3n) {
+.cell:nth-child(3),
+.cell:nth-child(6),
+.cell:nth-child(9) {
     border-right: none;
 }
 
