--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,9 @@ html, body {
 }
 
 .table.x .cell:not(.x):not(.circle):hover::after,
-.table.x .cell:not(.x):not(.circle):hover::before {
+.table.x .cell:not(.x):not(.circle):hover::before,
+.table.circle .cell:not(.x):not(.circle):hover::after,
+.table.circle .cell:not(.x):not(.circle):hover::before {
     background: rgba(127, 255, 212, 0.426) !important;
 }
 
@@ -88,7 +90,9 @@ html, body {
 
 /* circle stylizing*/
 
-.cell.circle::before, .cell.circle::after {
+.cell.circle::before, .cell.circle::after,
+.table.circle .cell:not(.x):not(.circle):hover::after,
+.table.circle .cell:not(.x):not(.circle):hover::before {
     content: "";
     height: calc(100px * 0.80);
     width: calc(100px * 0.80);
@@ -101,4 +105,31 @@ html, body {
 
 .winning-msg {
     display: none;
+    position: absolute;
+    top: 80%;
+    left: 0;
+    right: 0;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.btn {
+    font-size: 2rem;
+    background-color: aquamarine;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 4px;
+    border: none;
+    margin-top: 15px;
+    color: rgba(115, 61, 168, 1);
+}
+
+.btn:hover {
+    color: rgba(115, 61, 168, 1);
+    background-color: white;
+}
+
+.winner-text {
+     color: white;
 }
