--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,13 +104,15 @@ html, body {
 /* winner msg */
 
 .winning-msg {
-    display: none;
-    position: absolute;
-    top: 80%;
+    display: flex;
+    position: fixed;
+    top: 0;
     left: 0;
     right: 0;
+    bottom: 0;
     justify-content: center;
     align-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
     flex-direction: column;
 }
 
@@ -130,6 +132,11 @@ html, body {
     background-color: white;
 }
 
-.winner-text {
-     color: white;
+.victory-msg {
+    color: white;
+    font-size: 3rem;
+}
+
+.display-victory {
+    display: flex;
 }
