--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ html, body {
 /* winner msg */
 
 .winning-msg {
-    display: flex;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
